# pyzefir

./: .codeclimate.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  LICENSE.txt  Makefile  README.md  config_example.ini  pylama.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.gitlab/merge_request_templates/: bugfix_template.md  feat_template.md  fix_template.md
docs/: api_reference.rst  conf.py  index.rst  input_data.rst  installation.rst  introduction.rst  modules.rst  pyzefir.cli.rst  pyzefir.graph.rst  pyzefir.model.network_aggregator.rst  pyzefir.model.network_elements.energy_source_types.rst  pyzefir.model.network_elements.energy_sources.rst  pyzefir.model.network_elements.rst  pyzefir.model.rst  pyzefir.optimization.linopy.constraints_builder.rst  pyzefir.optimization.linopy.objective_builder.rst  pyzefir.optimization.linopy.preprocessing.parameters.rst  pyzefir.optimization.linopy.preprocessing.rst  pyzefir.optimization.linopy.preprocessing.variables.rst  pyzefir.optimization.linopy.rst  pyzefir.optimization.rst  pyzefir.parser.elements_parsers.rst  pyzefir.parser.rst  pyzefir.parser.validator.rst  pyzefir.postprocessing.rst  pyzefir.rst  pyzefir.structure_creator.cli.rst  pyzefir.structure_creator.data_loader.rst  pyzefir.structure_creator.rst  pyzefir.structure_creator.scenario.rst  pyzefir.structure_creator.structure_and_initial_state.rst  pyzefir.utils.converters.rst  pyzefir.utils.rst  quick_start.rst
pyzefir/: __init__.py  license_header.txt
pyzefir/cli/: __main__.py  logger.py  runner.py
pyzefir/graph/: constants.py  network_diagram.py  utils.py
pyzefir/model/: __init__.py  configs.py  elements.py  enum.py  exception_formatter.py  exceptions.py  network.py  network_element.py  network_validator.py  utils.py
pyzefir/model/network_aggregator/: __init__.py  aggregation_schemas.py  network_aggregator.py  utils.py
pyzefir/model/network_elements/: __init__.py  aggregated_consumer.py  bus.py  capacity_bound.py  capacity_factor.py  demand_chunk.py  demand_profile.py  dsr.py  emission_fee.py  fuel.py  generation_fraction.py  line.py  local_balancing_stack.py  transmission_fee.py
pyzefir/optimization/: exportable_results.py  input_data.py  model.py  opt_config.py  results.py
pyzefir/optimization/gurobi/: expression_handler.py  model.py
pyzefir/optimization/linopy/: expression_handler.py  model.py  utils.py
pyzefir/parser/: csv_parser.py  network_creator.py  utils.py
pyzefir/parser/elements_parsers/: aggregated_consumer_parser.py  bus_parser.py  capacity_bound_parser.py  capacity_factor_parser.py  demand_chunk_parser.py  demand_profile_parser.py  dsr_parser.py  element_parser.py  emission_fee_parser.py  energy_source_type_parser.py  energy_source_unit_parser.py  (+6 more)
pyzefir/postprocessing/: results_exporters.py  results_handler.py
pyzefir/structure_creator/: __main__.py  constants_enums.py  excel_writer.py  input_data.py  utils.py
pyzefir/utils/: config_parser.py  functions.py  git_info_dumper.py  path_manager.py
templates/parameters-example/: hour_sample.csv
templates/pyzefir-templates/: conversion_rate.xlsx  demand_chunks.xlsx  demand_types.xlsx  generator_types.xlsx  initial_state.xlsx  storage_types.xlsx  structure.xlsx
templates/pyzefir-templates-structure-creator/: capacity_factors.xlsx  fuels.xlsx  generator_types.xlsx
tests/: conftest.py  utils.py
tests/integration/: test_version.py
tests/unit/: defaults.py  test_git_info.py  test_version.py
uml/: model.puml
(+595 files in other folders)
